--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=KepregenyGUI
+application.vendor=hunor
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,8 +33,9 @@ dist.jar=${dist.dir}/KepregenyGUI.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/KepregenyGUI
+endorsed.classpath=
 excludes=
-file.reference.Kepregeny_Project-1.0-SNAPSHOT.jar=..\\Kepregeny_Project\\Kepregeny-Projekt\\target\\Kepregeny_Project-1.0-SNAPSHOT.jar
+file.reference.Kepregeny_Project-1.0-SNAPSHOT.jar=../../Kepregeny_Project/Kepregeny-Projekt/target/Kepregeny_Project-1.0-SNAPSHOT.jar
 includes=**
 jar.compress=false
 javac.classpath=\
