--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,11 +35,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/KepregenyGUI
 endorsed.classpath=
 excludes=
+file.reference.json-simple-1.1.1.jar=dist\\lib\\json-simple-1.1.1.jar
 file.reference.Kepregeny_Project-1.0-SNAPSHOT.jar=../../Kepregeny_Project/Kepregeny-Projekt/target/Kepregeny_Project-1.0-SNAPSHOT.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.Kepregeny_Project-1.0-SNAPSHOT.jar}
+    ${file.reference.Kepregeny_Project-1.0-SNAPSHOT.jar}:\
+    ${file.reference.json-simple-1.1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
