--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,7 +35,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/KepregenyGUI
 endorsed.classpath=
 excludes=
-file.reference.json-simple-1.1.1.jar=dist\\lib\\json-simple-1.1.1.jar
+file.reference.json-simple-1.1.1.jar=C:\\HUNI98\\json-simple-1.1.1.jar
 file.reference.Kepregeny_Project-1.0-SNAPSHOT.jar=../../Kepregeny_Project/Kepregeny-Projekt/target/Kepregeny_Project-1.0-SNAPSHOT.jar
 includes=**
 jar.compress=false
