--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,13 +35,16 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/KepregenyGUI
 endorsed.classpath=
 excludes=
+file.reference.gson-2.10.1.jar=C:\\HUNI98\\gson-2.10.1.jar
 file.reference.json-simple-1.1.1.jar=C:\\HUNI98\\json-simple-1.1.1.jar
 file.reference.Kepregeny_Project-1.0-SNAPSHOT.jar=../../Kepregeny_Project/Kepregeny-Projekt/target/Kepregeny_Project-1.0-SNAPSHOT.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.Kepregeny_Project-1.0-SNAPSHOT.jar}:\
-    ${file.reference.json-simple-1.1.1.jar}
+    ${file.reference.json-simple-1.1.1.jar}:\
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.gson-2.10.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
